# bank-admin-app

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: db.py  main.py  settings.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  accounts.py  customers.py  transferences.py
backend/app/models/: __init__.py  account.py  customer.py  health.py  transference.py
backend/migrations/versions/: 4b94d65713ae_add_account_table.py  73be6989523d_added_account_table.py  81b2c0533e6e_make_money_fields_decimals.py  981608b2cfa6_add_transference_table.py
frontend/: Dockerfile
frontend/app/: package-lock.json  package.json
frontend/app/src/app/: ThemeRegistry.tsx  layout.tsx  page.tsx  pages.tsx
frontend/app/src/app/accounts/: page.tsx
frontend/app/src/app/accounts/[id]/: page.tsx
frontend/app/src/app/accounts/hooks/: index.tsx
frontend/app/src/app/components/: CreateAccountButton.tsx  CreateCustomerButton.tsx  CreateEntityButton.tsx  CreateTransferenceButton.tsx
frontend/app/src/app/components/customers/: CustomerAccountDetails.tsx  CustomerDetails.tsx
frontend/app/src/app/components/root/: Footer.tsx  Header.tsx
frontend/app/src/app/customers/: page.tsx
frontend/app/src/app/customers/[id]/: page.tsx
frontend/app/src/app/customers/hooks/: index.tsx
frontend/app/src/app/hooks/: index.tsx
frontend/app/src/app/hooks/accounts/: index.tsx
frontend/app/src/app/transferences/: page.tsx
frontend/app/src/app/types/: index.tsx
frontend/app/src/app/utils/: axios.tsx
(+8 files in other folders)
